Changed font and background

--- a/app/src/main/res/layout/activity_create_station.xml
+++ b/app/src/main/res/layout/activity_create_station.xml
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Watershed"
                 android:textColor="#FFFFFF"
                 android:textSize="21sp"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="44dp"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Camera ID"
                 android:textColor="#FFFFFF"
                 android:textSize="21sp"
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="44dp"
                 android:layout_marginTop="56dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="LURE TYPE"
                 android:textColor="#FFFFFF"
                 android:textSize="21sp"
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="64dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="HABITAT"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -102,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="90dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="TERRAIN"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -115,7 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="75dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="SUBSTRATE"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -128,7 +128,7 @@
                 android:layout_height="44dp"
                 android:layout_marginStart="45dp"
                 android:layout_marginTop="30dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Station"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -141,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="35dp"
                 android:layout_marginTop="60dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="potential"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -208,7 +208,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
                 android:layout_marginTop="36dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Longitude"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -234,7 +234,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Create Station"
                 android:textColor="#FFFFFF"
                 android:textSize="24dp"
@@ -248,7 +248,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="36dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="STATION ID"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
@@ -276,7 +276,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Elevation"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -289,7 +289,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Latitude"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -311,7 +311,7 @@
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
                     android:checked="false"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_SkunkFishOil"
                     android:text="skunk + fish oil"
                     android:textColor="#FFFFFF"
@@ -322,7 +322,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_CastorFishOil"
                     android:text="castor +fish oil"
                     android:textColor="#FFFFFF"
@@ -333,7 +333,7 @@
                     android:layout_width="210dp"
                     android:layout_height="38dp"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_FishOil"
                     android:text="fish oil"
                     android:textColor="#FFFFFF"
@@ -344,7 +344,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_None"
                     android:text="none"
                     android:textColor="#FFFFFF"
@@ -386,7 +386,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_sand"
                     android:text="sand"
                     android:textColor="#FFFFFF"
@@ -397,7 +397,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_soil"
                     android:text="soil"
                     android:textColor="#FFFFFF"
@@ -408,7 +408,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_rock"
                     android:text="rock/gravel"
                     android:textColor="#FFFFFF"
@@ -419,7 +419,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_snow"
                     android:text="snow"
                     android:textColor="#FFFFFF"
@@ -430,7 +430,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_vegetation"
                     android:text="vegetation"
                     android:textColor="#FFFFFF"
@@ -466,7 +466,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Good"
                     android:text="good"
                     android:textColor="#FFFFFF"
@@ -477,7 +477,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Medium"
                     android:text="medium"
                     android:textColor="#FFFFFF"
@@ -488,7 +488,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Poor"
                     android:text="poor"
                     android:textColor="#FFFFFF"
@@ -510,7 +510,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Scrub"
                     android:text="scrub"
                     android:textColor="#FFFFFF"
@@ -521,7 +521,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Forest"
                     android:text="forest"
                     android:textColor="#FFFFFF"
@@ -532,7 +532,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Pasture"
                     android:text="pasture"
                     android:textColor="#FFFFFF"
@@ -543,7 +543,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Barren"
                     android:text="barren"
                     android:textColor="#FFFFFF"
@@ -554,7 +554,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Agric"
                     android:text="agric"
                     android:textColor="#FFFFFF"
@@ -575,7 +575,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Ridge"
                     android:text="ridge"
                     android:textColor="#FFFFFF"
@@ -586,7 +586,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Cliff"
                     android:text="cliff base"
                     android:textColor="#FFFFFF"
@@ -597,7 +597,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Draw"
                     android:text="draw"
                     android:textColor="#FFFFFF"
@@ -608,7 +608,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Vally"
                     android:text="valley"
                     android:textColor="#FFFFFF"
@@ -619,7 +619,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_Saddle"
                     android:text="saddle"
                     android:textColor="#FFFFFF"
@@ -630,7 +630,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:onClick="radioClicked_plateau"
                     android:text="plateau"
                     android:textColor="#FFFFFF"
