--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="Account Recovery"
         android:textColor="#FFFFFF"
         android:textSize="32dp"
