--- a/app/src/main/res/layout/activity_register_org.xml
+++ b/app/src/main/res/layout/activity_register_org.xml
@@ -14,7 +14,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="88dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:shadowColor="#B4B1B1"
         android:text="Register New Organization"
         android:textColor="#FFFF8D"
@@ -31,7 +31,7 @@
         android:layout_width="288dp"
         android:layout_height="45dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:shadowColor="#B4B1B1"
         android:text="Snow Leopard"
         android:textColor="#FFFFFF"
@@ -49,7 +49,7 @@
         android:layout_height="51dp"
         android:layout_marginBottom="10dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Region"
         android:inputType="text"
         android:textColorHint="#F8F8F8"
@@ -73,7 +73,7 @@
         android:layout_height="51dp"
         android:layout_marginBottom="10dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Organization Website"
         android:inputType="text"
         android:textColorHint="#F8F8F8"
@@ -86,7 +86,7 @@
         android:layout_width="300dp"
         android:layout_height="51dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Organization Name"
         android:inputType="text"
         android:textColorHint="#F8F8F8"
@@ -103,7 +103,7 @@
         android:layout_height="51dp"
         android:layout_marginBottom="10dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Phone Number"
         android:inputType="phone"
         android:textColorHint="#F8F8F8"
@@ -118,7 +118,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="96dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="Already Registered Your Organization? Click Here"
         android:textColor="#FAF5F7"
         android:textSize="18sp"
@@ -133,7 +133,7 @@
         android:layout_height="46dp"
         android:layout_marginBottom="24dp"
         android:background="#FFFF8D"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="REGISTER"
         android:textColor="#1B1A1A"
         android:textSize="18sp"
@@ -147,7 +147,7 @@
         android:layout_height="51dp"
         android:layout_marginBottom="10dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Organization Email"
         android:inputType="text"
         android:textColorHint="#F8F8F8"
