--- a/app/src/main/res/layout/activity_register_spinner0.xml
+++ b/app/src/main/res/layout/activity_register_spinner0.xml
@@ -12,7 +12,7 @@
         android:layout_width="301dp"
         android:layout_height="36dp"
         android:layout_marginTop="64dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Refresh"
         android:textColor="#FAF5F7"
@@ -27,7 +27,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="64dp"
         android:background="#FFFF8D"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="Submit"
         android:textColor="#FDFCFC"
         android:textSize="24sp"
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Already have an account?"
         android:textColor="#FAF5F7"
@@ -56,7 +56,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="#E8E6E6"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Select Country:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="8dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Choose Organization"
