--- a/app/src/main/res/layout/activity_register_spinner1.xml
+++ b/app/src/main/res/layout/activity_register_spinner1.xml
@@ -13,7 +13,7 @@
         android:layout_width="301dp"
         android:layout_height="36dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Refresh"
         android:textColor="#FAF5F7"
@@ -28,7 +28,7 @@
         android:layout_width="301dp"
         android:layout_height="36dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Choose Organization"
         android:textColor="#FAF5F7"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:shadowColor="#B4B1B1"
         android:text="Choose Country"
         android:textColor="#FFFFFF"
