--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Watershed"
                 android:textColor="#FFFFFF"
                 android:textSize="21sp"
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Camera ID"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Sdcard"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="44dp"
                 android:layout_marginTop="56dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="LURE TYPE"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -111,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="64dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="HABITAT"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -125,7 +125,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="90dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="TERRAIN"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -139,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="75dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="SUBSTRATE"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -153,7 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Notes"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -168,7 +168,7 @@
                 android:layout_height="44dp"
                 android:layout_marginStart="45dp"
                 android:layout_marginTop="30dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Station"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -182,7 +182,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="35dp"
                 android:layout_marginTop="60dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="potential"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -253,7 +253,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Longitude"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -301,7 +301,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Choose Station"
                 android:textColor="#FFFFFF"
                 android:textSize="24dp"
@@ -317,7 +317,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="36dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="STATION ID"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
@@ -347,7 +347,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Elevation"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -360,7 +360,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Latitude"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
@@ -384,7 +384,7 @@
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
                     android:checked="false"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="skunk + fish oil"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -394,7 +394,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="castor +fish oil"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -404,7 +404,7 @@
                     android:layout_width="210dp"
                     android:layout_height="38dp"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="fish oil"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -414,7 +414,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="none"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -460,7 +460,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="sand"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -470,7 +470,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="soil"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -480,7 +480,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="rock/gravel"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -490,7 +490,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="snow"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -500,7 +500,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="vegetation"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -551,7 +551,7 @@
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
                     android:checked="false"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="good"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -561,7 +561,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="medium"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -571,7 +571,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="poor"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -593,7 +593,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="scrub"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -603,7 +603,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="forest"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -613,7 +613,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="pasture"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -623,7 +623,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="barren"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -633,7 +633,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="agric"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -654,7 +654,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="ridge"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -664,7 +664,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="cliff base"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -674,7 +674,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="draw"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -684,7 +684,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="valley"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -694,7 +694,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="saddle"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -704,7 +704,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="#FFFFFF"
-                    android:fontFamily="@font/aclonica"
+                    android:fontFamily="sans-serif"
                     android:text="plateau"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
@@ -739,7 +739,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="Internet"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
@@ -753,7 +753,7 @@
                 android:id="@+id/createStationNetStatusId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/aclonica"
+                android:fontFamily="sans-serif"
                 android:text="On"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
