--- a/app/src/main/res/layout/activity_add__prey.xml
+++ b/app/src/main/res/layout/activity_add__prey.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="Lattitude"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="Add Prey"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
@@ -42,7 +42,7 @@
         android:layout_height="29dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="128dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="Prey"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="Longitude"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="Notes"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
@@ -150,7 +150,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="Back"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
