--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="#FFFF8D"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="LOGIN"
         android:textColor="#BCBCBC"
         android:textSize="24sp"
@@ -75,7 +75,7 @@
         android:layout_marginTop="8dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Password:"
         android:inputType="textPassword"
         android:textColorHint="#F8F8F8"
@@ -90,7 +90,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Email:"
         android:inputType="textPersonName"
         android:textColorHint="#F8F8F8"
@@ -105,7 +105,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Login"
@@ -123,7 +123,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="@string/app_name"
