--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:shadowColor="#B4B1B1"
         android:text="@string/app_name"
         android:textColor="#FFFFFF"
@@ -43,7 +43,7 @@
         android:layout_width="230dp"
         android:layout_height="34dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:shadowColor="#B4B1B1"
         android:text="Register New Account"
         android:textColor="#FFFF8D"
@@ -79,7 +79,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="54dp"
         android:background="#FFFF8D"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="REGISTER"
         android:textColor="#1B1A1A"
         android:textSize="24sp"
@@ -120,7 +120,7 @@
         android:layout_marginTop="8dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Full Name:"
         android:inputType="textPersonName"
         android:textColorHint="#F8F8F8"
@@ -135,7 +135,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Job Title:"
         android:inputType="textPersonName"
         android:textColorHint="#F8F8F8"
@@ -150,7 +150,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Email:"
         android:inputType="textPersonName"
         android:textColorHint="#F8F8F8"
@@ -165,7 +165,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Phone Number:"
         android:inputType="textPersonName"
         android:textColorHint="#F8F8F8"
@@ -180,7 +180,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Re-enter Password:"
         android:inputType="textPassword"
         android:textColorHint="#F8F8F8"
@@ -195,7 +195,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Password:"
         android:inputType="textPassword"
         android:textColorHint="#F8F8F8"
