--- a/app/src/main/res/layout/activity_register__org__admin.xml
+++ b/app/src/main/res/layout/activity_register__org__admin.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Register Admin"
@@ -33,7 +33,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="@string/app_name"
@@ -50,7 +50,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Job:"
         android:inputType="text"
         android:textColorHint="#F8F8F8"
@@ -65,7 +65,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Name:"
         android:inputType="text"
         android:textColorHint="#F8F8F8"
@@ -80,7 +80,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Phone Number:"
         android:inputType="phone"
         android:textColorHint="#F8F8F8"
@@ -94,7 +94,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Password:"
         android:inputType="textPassword"
         android:textColorHint="#F8F8F8"
@@ -109,7 +109,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:hint="Email:"
         android:inputType="text"
         android:textColorHint="#F8F8F8"
@@ -124,7 +124,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="64dp"
         android:background="#FFFF8D"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:text="REGISTER"
         android:textColor="#1B1A1A"
         android:textSize="18sp"
