--- a/app/src/main/res/layout/activity_register_spinner2.xml
+++ b/app/src/main/res/layout/activity_register_spinner2.xml
@@ -12,7 +12,7 @@
         android:layout_width="301dp"
         android:layout_height="36dp"
         android:layout_marginTop="64dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Refresh"
         android:textColor="#FAF5F7"
@@ -36,7 +36,7 @@
         android:layout_width="301dp"
         android:layout_height="36dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Choose Country"
         android:textColor="#FAF5F7"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Choose Region"
